dickbutt v2.0 thanks obama

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -42,6 +42,7 @@
             android:label="@string/title_activity_maps">
             <intent-filter>
                 <action android:name="gotothisfuckinglocation" />
+                <action android:name="android.intent.action.SEND" />
                 <category android:name="android.intent.category.DEFAULT" />
             </intent-filter>
 
