dickbutt v3.1 you are here

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -3,6 +3,9 @@
     xmlns:tools="http://schemas.android.com/tools"
     package="com.example.mikedrop">
     <uses-permission android:name="android.permission.INTERNET"/>
+    <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION" />
+    <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION"/>
+    <uses-permission android:name="android.permission.ACCESS_BACKGROUND_LOCATION" />
     <application
         android:allowBackup="true"
         android:dataExtractionRules="@xml/data_extraction_rules"
@@ -13,6 +16,7 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.Mikedrop"
         tools:targetApi="31">
+
         <activity
             android:name=".DiningActivity"
             android:exported="false"
@@ -23,7 +27,7 @@
                 android:value="" />
         </activity>
 
-        <meta-data
+    <meta-data
             android:name="com.google.android.geo.API_KEY"
             android:value="AIzaSyAcDD9DlrZks9v9SPV4Lb_6OhbkBBlkCTo" />
 
@@ -36,6 +40,7 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+
         <activity
             android:name=".MapsActivity"
             android:exported="true"
